--- a/trunk/app/views/tasks/create.js.erb
+++ b/trunk/app/views/tasks/create.js.erb
@@ -1,5 +1,5 @@
 <% if @task.completed? -%>
-	$("#completed_task_list").append(<%= partial 'task', :object => @task %>);
+	render_edit('<%= @task.id %>', '#completed_task_list');
 <% else -%>
-	$("#incomplete_task_list").append(<%= partial 'task', :object => @task %>);
+	render_edit('<%= @task.id %>', '#incomplete_task_list');
 <% end -%>
